# acdc

./: .gitignore  AGENTS.md  ARCHITECTURE.adoc  CHANGELOG.adoc  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.adoc  TICKET_208_INVESTIGATION.md  rust-toolchain.toml
acdc-cli/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.adoc
acdc-cli/src/: error.rs  main.rs  timing.rs
acdc-cli/src/subcommands/: convert.rs  execute.rs  inspect.rs  lint.rs  mod.rs  tck.rs
acdc-cli/tests/: cli.rs
acdc-core/: Cargo.toml
acdc-core/src/: config.rs  lib.rs
acdc-editor-wasm/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
acdc-editor-wasm/assets/: default-content.adoc
acdc-editor-wasm/src/: ast_highlight.rs  editor.rs  lib.rs
acdc-editor-wasm/www/: index.html  style.css
acdc-lint/: CHANGELOG.md  Cargo.toml  README.adoc  RULES.adoc
acdc-lint/src/: error.rs  lib.rs  registry.rs  runner.rs
acdc-lint/src/rules/: attributes.rs  blocks.rs  document.rs  headings.rs  lists.rs  markdown.rs  mod.rs  prose.rs  resources.rs  source.rs  structure.rs  tables.rs  whitespace.rs
acdc-lsp/: CHANGELOG.md  Cargo.toml  README.md  clippy.toml
acdc-lsp/src/: backend.rs  config.rs  convert.rs  lib.rs  limits.rs  main.rs
acdc-lsp/src/capabilities/: call_hierarchy.rs  code_actions.rs  code_lens.rs  completion.rs  definition.rs  diagnostics.rs  document_links.rs  file_rename.rs  folding.rs  formatting.rs  hover.rs  inlay_hints.rs  mod.rs  on_type_formatting.rs  references.rs  rename.rs  selection_range.rs  semantic_tokens.rs  signature_help.rs  symbols.rs  workspace_symbols.rs
acdc-lsp/src/state/: document.rs  mod.rs  workspace.rs  xref_target.rs
acdc-lsp/tests/: backend_options.rs  inlay_hints.rs  integration.rs  lsp_harness.rs  selection_range.rs
acdc-lsp/tests/common/: mod.rs
acdc-lsp/tests/integration/: backend_options.rs  inlay_hints.rs  selection_range.rs
acdc-parser/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.adoc  README.md  build.rs
acdc-parser/benches/: compare_conditionals.py  conditional_bench.rs  f1_include_bench.rs  parser_bench.rs
acdc-parser/examples/: generate_parser_fixtures.rs  inspect_ast.rs
acdc-parser/fixtures/include_chain/: inner.adoc  main.adoc  outer.adoc
acdc-parser/fixtures/preprocessor/: include_counter_main.adoc  include_counter_part.adoc  include_double_wildcard.adoc  include_footnote_main.adoc  include_footnote_part.adoc  include_indent_main.adoc  include_indent_target.rb  include_line_mapping_chapter.adoc  include_line_mapping_main.adoc  include_multiple_tags.adoc  include_nested_tag.adoc  include_partial_lines.adoc  include_partial_multi.adoc  include_partial_part.adoc  include_quote_main.adoc  include_quote_part.adoc  include_refs_main.adoc  include_refs_part.adoc  include_tag_with_lines.adoc  include_untagged_only.adoc  include_utf16le.adoc  include_wildcard_exclude.adoc  include_with_indent.adoc  include_with_indent_and_tag.adoc  include_with_indent_zero.adoc  include_with_tag.adoc  main_with_include.adoc  nested_include_main.adoc  secure_include_main.adoc  tagged_content.adoc  utf16be_bom.adoc  utf16le_bom.adoc  utf8_bom.adoc  utf8_no_bom.adoc
acdc-parser/fixtures/samples/: README.adoc
acdc-parser/fixtures/tests/: admonition_block.adoc  admonition_block.json  admonition_paragraph.adoc  admonition_paragraph.json  admonition_with_title.adoc  admonition_with_title.json  admonition_without_title.adoc  admonition_without_title.json  all_formatting_in_passthrough_constrained.adoc  all_formatting_in_passthrough_constrained.json  all_formatting_in_passthrough_super_sub.adoc  all_formatting_in_passthrough_super_sub.json  all_formatting_in_passthrough_unconstrained.adoc  all_formatting_in_passthrough_unconstrained.json  anchor_attribute_substitution.adoc  anchor_attribute_substitution.json  anchor_with_spaces.adoc  anchor_with_spaces.json  author_from_attribute.adoc  author_from_attribute.json  bare_role_highlight.adoc  bare_role_highlight.json  basic_header.adoc  basic_header.json  basic_header.test  basic_image_block.adoc  basic_image_block.json  basic_image_block.test  basic_title_with_double_colon_with_subtitle.adoc  basic_title_with_double_colon_with_subtitle.json  basic_title_with_double_colon_with_subtitle.test  basic_title_with_subtitle.adoc  basic_title_with_subtitle.json  (+617 more)
acdc-parser/fuzz/: Cargo.toml
acdc-parser/grammar/: asciidoc.pest  block.pest  core.pest  delimited.pest  document.pest  inline_preprocessor.pest  inlines.pest  list.pest
acdc-parser/proptest-regressions/: .gitignore
acdc-parser/src/: anchor.rs  constants.rs  error.rs  inline_preprocessor.rs  lib.rs  model.rs  options.rs  parsed.rs  preprocessor.rs  safe_mode.rs  substitutions.rs  warning.rs
acdc-parser/tests/: conditional_allocations.rs  include_remote_origin.rs  include_safe_server_confinement.rs  include_secure_mode.rs  include_uri_authority.rs  link_attribute_only.rs  no_leak.rs  unterminated_tables.rs
acdc-pdf-images/: CHANGELOG.md  Cargo.toml  README.adoc
acdc-pdf-images/src/: fetch.rs  path.rs
acdc-pdf-render/: CHANGELOG.md  Cargo.toml  README.adoc
acdc-pdf-render/src/: lib.rs  resolver.rs
acdc-pdf-typst/: CHANGELOG.md  Cargo.toml  README.adoc
acdc-pdf-typst/src/: lib.rs
acdc-tck/: Cargo.toml
acdc-tck/src/: lib.rs
acdc-term/: Cargo.toml  README.md
acdc-term/samples/: simple.adoc
acdc-term/src/: block.rs  delimited.rs  document.rs  inline.rs  lib.rs  main.rs  paragraph.rs  section.rs  table.rs
acdc-terminal/: Cargo.toml
acdc-terminal/src/: document.rs  inline.rs  lib.rs  paragraph.rs  section.rs
backends/acdc-terminal/: Cargo.toml  README.adoc  README.md
converters/common/: Cargo.toml
converters/core/: CHANGELOG.md  Cargo.toml
converters/dev/: Cargo.toml
converters/html/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.adoc  build.rs
converters/manpage/: CHANGELOG.md  Cargo.toml  README.adoc
converters/markdown/: CHANGELOG.md  Cargo.toml  README.adoc
converters/pdf/: CHANGELOG.md  Cargo.toml  README.adoc
converters/tck/: Cargo.toml
converters/terminal/: CHANGELOG.md  Cargo.toml  README.adoc
(+904 files in other folders)
