[workspace]
members = [
  "acdc-cli",
  "acdc-lsp",
  "acdc-parser",
  "converters/core",
  "converters/dev",
  "converters/html",
  "converters/manpage",
  "converters/terminal",
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
acdc-converters-core = { path = "converters/core" }
acdc-converters-dev = { path = "converters/dev" }
acdc-parser = { path = "acdc-parser" }
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
pretty_assertions = "1.4"
rayon = "1.11"
rstest = "0.26"
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-test = "0.2"
thiserror = "2"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
# Defensive programming - prevent missing cases when enums evolve
wildcard_enum_match_arm = "deny"

[profile.dev]
# Skip LLVM optimization for your code (faster compile)
opt-level = 0

# But keep dependencies optimized (faster runtime, one-time cost)
[profile.dev.package."*"]
opt-level = 2

[profile.test]
# Same strategy for test builds
opt-level = 0

[profile.test.package."*"]
opt-level = 2

[profile.release]
# Enable link-time optimization for better cross-crate inlining
lto = "thin"
# Single codegen unit for maximum optimization (slower compile, faster runtime)
codegen-units = 1
# Enable debug info for profiling in release builds
debug = "line-tables-only"
