[workspace]
members = [
  "acdc-cli",
  "acdc-editor-wasm",
  "acdc-lsp",
  "acdc-parser",
  "converters/core",
  "converters/dev",
  "converters/html",
  "converters/manpage",
  "converters/markdown",
  "converters/terminal",
]
default-members = [
  "acdc-cli",
  "acdc-lsp",
  "acdc-parser",
  "converters/core",
  "converters/dev",
  "converters/html",
  "converters/manpage",
  "converters/markdown",
  "converters/terminal",
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
acdc-converters-core = { path = "converters/core" }
acdc-converters-dev = { path = "converters/dev" }
acdc-converters-html = { path = "converters/html" }
acdc-converters-markdown = { path = "converters/markdown" }
acdc-parser = { path = "acdc-parser" }
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
pretty_assertions = "1.4"
rayon = "1.11"
rstest = "0.26"
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-test = "0.2"
thiserror = "2"
unicode-width = "0.2"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
wildcard_enum_match_arm = "deny"
indexing_slicing = "deny"
fallible_impl_from = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
pedantic = "deny"
unreachable = "deny"
todo = "deny"
unimplemented = "deny"

[profile.dev]
# Skip LLVM optimization for your code (faster compile)
opt-level = 0

# But keep dependencies optimized (faster runtime, one-time cost)
[profile.dev.package."*"]
opt-level = 2

[profile.test]
# Same strategy for test builds
opt-level = 0

[profile.test.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

# Release build with debug symbols preserved for profiling (samply, cargo flamegraph).
# Inherits all release optimizations so hotspots match production behaviour.
[profile.profiling]
inherits = "release"
debug = true
strip = false
