[workspace]
members = [
  "acdc-cli",
  "acdc-editor-wasm",
  "acdc-lint",
  "acdc-lsp",
  "acdc-parser",
  "converters/core",
  "converters/dev",
  "converters/html",
  "converters/manpage",
  "converters/markdown",
  "converters/pdf",
  "converters/pdf/crates/*",
  "converters/terminal",
]
default-members = [
  "acdc-cli",
  "acdc-lint",
  "acdc-lsp",
  "acdc-parser",
  "converters/core",
  "converters/dev",
  "converters/html",
  "converters/manpage",
  "converters/markdown",
  "converters/pdf",
  "converters/pdf/crates/*",
  "converters/terminal",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
acdc-converters-core = { path = "converters/core", default-features = false }
acdc-converters-dev = { path = "converters/dev" }
acdc-converters-html = { path = "converters/html", default-features = false }
acdc-converters-manpage = { path = "converters/manpage", default-features = false }
acdc-converters-markdown = { path = "converters/markdown" }
acdc-converters-pdf = { path = "converters/pdf", default-features = false }
acdc-converters-terminal = { path = "converters/terminal", default-features = false }
acdc-lint = { path = "acdc-lint", default-features = false }
acdc-parser = { path = "acdc-parser", default-features = false }
base64 = "0.22"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp", "tiff"] }
lopdf = "0.44"
mockito = "1"
pretty_assertions = "1.4"
rayon = "1.11"
rstest = "0.26"
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-saphyr = { version = "0.0.29", default-features = false, features = ["deserialize"] }
sha2 = "0.11"
tempfile = "3"
tracing = "0.1"
tracing-test = "0.2"
thiserror = "2"
ttf-parser = "0.25"
typst = "=0.15.0"
typst-as-lib = { version = "=0.16.0", default-features = false }
typst-layout = "=0.15.0"
typst-pdf = "=0.15.0"
unicode-width = "0.2"
ureq = "3.3"
url = "2"
percent-encoding = "2"
usvg = "0.47"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
wildcard_enum_match_arm = "deny"
indexing_slicing = "deny"
fallible_impl_from = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
pedantic = "deny"
unreachable = "deny"
todo = "deny"
unimplemented = "deny"

[profile.dev]
# Skip LLVM optimization for your code (faster compile)
opt-level = 0

# But keep dependencies optimized (faster runtime, one-time cost)
[profile.dev.package."*"]
opt-level = 2

[profile.test]
# Same strategy for test builds
opt-level = 0

[profile.test.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

# Release build with debug symbols preserved for profiling (samply, cargo flamegraph).
# Inherits all release optimizations so hotspots match production behaviour.
[profile.profiling]
inherits = "release"
debug = true
strip = false
