[package]
name = "acdc-cli"
version = "0.1.0"
edition.workspace = true
description = "Text processor for parsing AsciiDoc and converting it to output formats such as HTML, manual pages, or even the terminal."
readme = "README.adoc"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nlopes/acdc"
keywords = ["asciidoc", "parser", "converter", "documentation"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "acdc"
path = "src/main.rs"
test = false
doc = false

[dependencies]
acdc-converters-core.workspace = true
acdc-converters-html = { path = "../converters/html", optional = true }
acdc-parser.workspace = true
acdc-converters-terminal = { path = "../converters/terminal", optional = true }
acdc-converters-manpage = { path = "../converters/manpage", optional = true }
anyhow = "1.0.100"
clap.workspace = true
crossterm.workspace = true
miette = { version = "7", features = ["derive", "fancy"] }
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[features]
# Default features - HTML converter is always included as the primary output format
default = ["html"]

# Output converters
html = ["dep:acdc-converters-html"]            # HTML5 converter with Asciidoctor-compatible styling
manpage = ["dep:acdc-converters-manpage"]      # Manpage (roff/troff) converter for man pages
terminal = ["dep:acdc-converters-terminal"]    # Terminal converter with ANSI color support

# Syntax highlighting for source blocks (requires html feature)
highlighting = ["acdc-converters-html?/highlighting"]

# Development tools
inspect = []  # AST inspection tool for debugging parser output
tck = []      # Technology Compatibility Kit for spec compliance testing

# Compatibility features
setext = ["acdc-parser/setext"]  # Enable Setext-style (underlined) header parsing

# Feature groups for convenience
all-backends = ["html", "manpage", "terminal"]  # Enable all output converters
dev-tools = ["inspect"]              # Enable development utilities
test-tools = ["tck"]                 # Enable testing and compliance tools

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Defensive programming
wildcard_enum_match_arm = "deny"
indexing_slicing = "deny"
fallible_impl_from = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
pedantic = "deny"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
