[package]
name = "acdc-cli"
version = "0.2.0"
edition.workspace = true
description = "Text processor for parsing AsciiDoc and converting it to HTML, PDF, manual pages, Markdown, or terminal output."
readme = "README.adoc"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nlopes/acdc"
keywords = ["asciidoc", "parser", "converter", "documentation"]
categories = ["command-line-utilities", "text-processing"]
publish = false

[[bin]]
name = "acdc"
path = "src/main.rs"
doc = false

[dependencies]
acdc-converters-core.workspace = true
acdc-converters-html = { workspace = true, optional = true }
acdc-lint = { workspace = true, optional = true }
acdc-parser.workspace = true
acdc-converters-terminal = { workspace = true, optional = true }
acdc-converters-manpage = { workspace = true, optional = true }
acdc-converters-markdown = { workspace = true, optional = true }
acdc-converters-pdf = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
clap.workspace = true
crossterm.workspace = true
miette = { version = "7", features = ["derive", "fancy"] }
open = "5"
rayon.workspace = true
regex = { version = "1", optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
tempfile.workspace = true

[features]
# Default features - HTML converter is always included as the primary output format
default = ["html", "lint", "pre-spec-subs", "setext"]

# Asciidoctor-compatible subs= attribute. Experimental - may be removed when AsciiDoc spec finalizes.
# Forwarded to every converter dependency that honours subs=.
pre-spec-subs = [
    "acdc-parser/pre-spec-subs",
    "acdc-converters-core/pre-spec-subs",
    "acdc-converters-html?/pre-spec-subs",
    "acdc-converters-manpage?/pre-spec-subs",
    "acdc-converters-pdf?/pre-spec-subs",
    "acdc-converters-terminal?/pre-spec-subs",
    "acdc-lint?/pre-spec-subs",
]

# Output converters
html = ["dep:acdc-converters-html"]            # HTML5 converter with Asciidoctor-compatible styling
manpage = ["dep:acdc-converters-manpage"]      # Manpage (roff/troff) converter for man pages
markdown = ["dep:acdc-converters-markdown"]    # Markdown converter (CommonMark and GitHub Flavored Markdown)
pdf = ["dep:acdc-converters-pdf", "dep:chrono"] # PDF converter backed by the Rust Typst engine
terminal = ["dep:acdc-converters-terminal"]    # Terminal converter with ANSI color support

# Document tools
lint = ["dep:acdc-lint"]                       # AsciiDoc lint command

# Syntax highlighting for source blocks in selected HTML and terminal backends.
highlighting = [
    "acdc-converters-html?/highlighting",
    "acdc-converters-terminal?/highlighting",
]
# Enable terminal-styled rendering in the HTML converter.
html-terminal = ["html", "acdc-converters-html/terminal"]
# Render `[terminal]` session blocks through libghostty-vt for the terminal
# backend. Requires a Zig toolchain to build the bundled libghostty-vt, which is
# statically linked into the binary.
terminal-emulator = [
    "terminal",
    "acdc-converters-terminal/emulator",
]

# Development tools
execute = ["dep:regex"]  # Skeleton for running command blocks from AsciiDoc
inspect = []  # AST inspection tool for debugging parser output
tck = []      # Technology Compatibility Kit for spec compliance testing

# Compatibility features
setext = ["acdc-parser/setext", "acdc-lint?/setext"]  # Enable Setext-style (underlined) header parsing
network = ["acdc-parser/network", "acdc-lint?/network", "acdc-converters-pdf?/network"]  # Enable remote include parsing and remote PDF images

# Feature groups for convenience
all-backends = ["html", "manpage", "markdown", "pdf", "terminal"]  # Enable all output converters
dev-tools = ["execute", "inspect"]   # Enable development utilities
test-tools = ["tck"]                 # Enable testing and compliance tools

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
wildcard_enum_match_arm = "deny"
indexing_slicing = "deny"
fallible_impl_from = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
pedantic = "deny"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
