[package]
name = "acdc-core"
description = "Traits and models used by other crates related with parsing and converting `AsciiDoc`"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
clap.workspace = true
pest = "2.7.15"
serde.workspace = true

[lints]
workspace = true
