[package]
name = "acdc-core"
description = "Shared set of data structures and types"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
clap.workspace = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Defensive programming
wildcard_enum_match_arm = "deny"
indexing_slicing = "deny"
fallible_impl_from = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
pedantic = "deny"
unreachable = "deny"
todo = "deny"
unimplemented = "deny"
