[package]
name = "acdc-editor-wasm"
version = "0.4.0"
edition.workspace = true
description = "WASM-based AsciiDoc live editor with syntax highlighting and preview"
repository = "https://github.com/nlopes/acdc"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
acdc-parser = { workspace = true, features = ["setext"] }
acdc-converters-core.workspace = true
acdc-converters-html = { workspace = true, features = ["highlighting"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Clipboard",
    "CssStyleDeclaration",
    "Document",
    "DomTokenList",
    "Element",
    "Event",
    "EventTarget",
    "HtmlElement",
    "HtmlTextAreaElement",
    "InputEvent",
    "KeyboardEvent",
    "MouseEvent",
    "Navigator",
    "Storage",
    "Window",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false
omit-default-module-path = false

[lints.clippy]
# Defensive programming
wildcard_enum_match_arm = "deny"
indexing_slicing = "deny"
fallible_impl_from = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
pedantic = "deny"
unreachable = "deny"
todo = "deny"
unimplemented = "deny"
