[package]
name = "acdc-lsp"
version.workspace = true
edition.workspace = true
description = "Language Server Protocol implementation for AsciiDoc using acdc-parser"

[[bin]]
name = "acdc-lsp"
path = "src/main.rs"
test = false
doc = false

[lib]
path = "src/lib.rs"

[dependencies]
acdc-parser.workspace = true
dashmap = "6"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20"
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
wildcard_enum_match_arm = "deny"
indexing_slicing = "deny"
fallible_impl_from = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
pedantic = "deny"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
