[package]
name = "acdc-lsp"
version.workspace = true
edition.workspace = true
description = "Language Server Protocol implementation for AsciiDoc using acdc-parser"

[[bin]]
name = "acdc-lsp"
path = "src/main.rs"
test = false
doc = false

[lib]
path = "src/lib.rs"

[dependencies]
acdc-parser.workspace = true
dashmap = "6"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20"
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
indexing_slicing = "deny"
fallible_impl_from = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
pedantic = "deny"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
# Allow truncation casts for LSP position types (LSP uses u32, parser uses usize)
cast_possible_truncation = "allow"
