[package]
name = "acdc-parser"
description = "`AsciiDoc` parser using PEG grammars"
version = "0.9.0"
edition.workspace = true
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nlopes/acdc"
documentation = "https://docs.rs/acdc-parser"
keywords = ["asciidoc", "parser", "markup"]
categories = ["parsing", "text-processing"]
exclude = [
    "AGENTS.md",
    "README.adoc",
    "benches/",
    "examples/",
    "fixtures/",
    "proptest-regressions/",
    "tests/",
]

[features]
default = ["pre-spec-subs"]
network = ["dep:ureq"]
setext = []  # Enable Setext-style (underlined) header parsing
# Asciidoctor-compatible subs= attribute. Experimental - may be removed when AsciiDoc spec finalizes.
# See: https://gitlab.eclipse.org/eclipse/asciidoc-lang/asciidoc-lang/-/issues/16
pre-spec-subs = []

[dependencies]
bumpalo = { version = "3", features = ["collections"] }
csv = "1.4"
encoding_rs = "0.8"
evalexpr = "13"
peg = "0.8"
rustc-hash.workspace = true
self_cell = "1"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
url = "2.5"
# Network support for remote includes (optional - saves ~8s compile time when disabled)
ureq = { version = "3.1", optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
crossterm = "0.29"
pretty_assertions.workspace = true
proptest = "1.9"
rstest.workspace = true
# Tiny tracking global allocator for the `no_leak` integration test. Encapsulates
# its own `unsafe impl GlobalAlloc` so the workspace `forbid(unsafe_code)` lint
# stays untouched.
stats_alloc = "0.1"
tracing-test.workspace = true

[[bench]]
name = "parser_bench"
harness = false

[lints]
workspace = true
