[package]
name = "acdc-tck"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
acdc-core = { path = "../acdc-core" }
acdc-parser = { path = "../acdc-parser" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
