[package]
name = "acdc-term"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
acdc-parser = { path = "../acdc-parser" }
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
comfy-table = "7.1.3"
crossterm = "0.28.1"

[lints]
workspace = true
