[package]
name = "acdc-terminal"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
acdc-backends-common.workspace = true
acdc-parser.workspace = true
clap.workspace = true
comfy-table = "7.1.3"
crossterm = "0.28.1"
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
