[package]
name = "acdc-converters-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
acdc-core.workspace = true
acdc-parser = { path = "../../acdc-parser" }
clap.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
