[package]
name = "acdc-converters-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
acdc-core.workspace = true
acdc-parser = { path = "../../acdc-parser" }
clap.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Defensive programming
wildcard_enum_match_arm = "deny"
indexing_slicing = "deny"
fallible_impl_from = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
pedantic = "deny"
todo = "warn"
unimplemented = "warn"
unreachable = "deny"
