[package]
name = "acdc-converters-core"
version.workspace = true
edition.workspace = true
description = "Core traits and utilities for acdc document converters"

[dependencies]
acdc-parser = { path = "../../acdc-parser" }
thiserror.workspace = true
tracing.workspace = true

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
# Defensive programming
wildcard_enum_match_arm = "deny"
indexing_slicing = "deny"
fallible_impl_from = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
pedantic = "deny"
todo = "warn"
unimplemented = "warn"
unreachable = "deny"
