[package]
name = "acdc-converters-dev"
version = "0.1.0"
edition.workspace = true
description = "Development and testing utilities for acdc converters"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
acdc-parser = { path = "../../acdc-parser" }
acdc-converters-core = { path = "../core" }
crossterm.workspace = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "deny"
