[package]
name = "acdc-converters-html"
version = "0.1.0"
edition.workspace = true
description = "HTML converter"
license = "MIT OR Apache-2.0"

[features]
default = ["pre-spec-subs"]
# Asciidoctor-compatible subs= attribute. Experimental - may be removed when AsciiDoc spec finalizes.
pre-spec-subs = ["acdc-parser/pre-spec-subs"]
# Enable syntax highlighting for source blocks using giallo
highlighting = ["dep:giallo"]

[dependencies]
acdc-converters-core.workspace = true
acdc-parser.workspace = true
chrono.workspace = true
giallo = { path = "../../../giallo", optional = true, features = ["dump"] }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
acdc-converters-dev.workspace = true
pretty_assertions.workspace = true
rstest.workspace = true
tempfile = "3.25.0"
tracing-test.workspace = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Defensive programming
wildcard_enum_match_arm = "deny"
indexing_slicing = "deny"
fallible_impl_from = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
pedantic = "deny"
unreachable = "deny"
todo = "deny"
unimplemented = "deny"
