[package]
name = "acdc-converters-html"
version = "0.1.0"
edition.workspace = true
description = "HTML converter"
license = "MIT OR Apache-2.0"
publish = false

[features]
default = ["pre-spec-subs"]
# Asciidoctor-compatible subs= attribute. Experimental - may be removed when AsciiDoc spec finalizes.
pre-spec-subs = ["acdc-parser/pre-spec-subs", "acdc-converters-core/pre-spec-subs"]
# Enable syntax highlighting for source blocks using syntect
highlighting = ["dep:syntect"]
# Render terminal-converter output into selectable HTML via libghostty-vt.
terminal = ["dep:acdc-converters-terminal", "acdc-converters-terminal/render-state", "acdc-converters-terminal/highlighting"]

[dependencies]
acdc-converters-core.workspace = true
acdc-converters-terminal = { workspace = true, optional = true }
acdc-parser.workspace = true
chrono.workspace = true
syntect = { version = "5.3", optional = true, default-features = false, features = ["default-fancy"] }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
acdc-converters-dev.workspace = true
pretty_assertions.workspace = true
rstest.workspace = true
tempfile = "3.25.0"
tracing-test.workspace = true

[lints]
workspace = true
