[package]
name = "acdc-converters-manpage"
version = "0.1.0"
edition.workspace = true
description = "Manpage converter"
license = "MIT OR Apache-2.0"

[dependencies]
acdc-converters-core.workspace = true
acdc-parser.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
acdc-converters-dev.workspace = true
pretty_assertions.workspace = true
rstest.workspace = true
tracing-test.workspace = true

[lints]
workspace = true
